rust/tests/snapshots/output/completions__bare_bash_macos.snap
---
source: tests/cli/snapshots.rs
---
$ vendo completions
exit: 0
--- stdout ---
--- stderr ---
`vendo completions <shell>` prints the TAB-completion script for bash, zsh or fish.
The installer saves it and sets up your shell to load it, so you rarely need to run it yourself.

Bash completions are not installed yet.

To install them, run the installer:
  curl -fsSL https://app2.vendodata.com/install.sh | bash
or add this line to ~/.bash_profile:
  eval "$(vendo completions bash)"
Then open a new terminal.
